2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-ssh-generate.glade: Hook up help button. Patch by
    milo_casagrande@yahoo.it. Fixes #376098
    
2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * AUTHORS:
    * help/C/seahorse.xml: 
    * src/seahorse-key-manager.c: Update to the user manual by 
    milo_casagrande@yahoo.it. Fixes #376098
    
2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-generate.glade: Make PGP generate dialog 
    be consistent with SSH one. Fixes #376707

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-delete.c: Don't prompt when deleting each key when 
    deleting public keys. Fixes bug #

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c:
    * src/seahorse-gkeyring-item.c:
    * src/seahorse-key-manager.c: Show valid keys on the trusted tab. 
    Also fix usage of SKEY_FLAG_IS_VALID. Fixes bug #369536

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-results.glade: Change default window size
    * libseahorse/seahorse-progress.c: Show progress in keyserver search
    * libseahorse/seahorse-hkp-source.c: 
    * src/seahorse-keyserver-results.c: Fix problem with 'No matching keys
    found' when syncing. Fixes #369616

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-keyset.h:
    * libcryptui/tests/cryptui-test-keyset.c:
    * libcryptui/tests/cryptui-test-ui.c:
    * plugins/applet/seahorse-applet.c:
    * plugins/epiphany/seahorse-extension.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/nautilus/seahorse-tool.c: Show UIDs in the recipient
    selection dialog. Fixes bug #371636

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-memory.c: Secure memory reallocation
    fixes. Fixes bug #371666

2006-11-09  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: