@@ -1,5 +1,11 @@
 2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-ssh-operation.c:
+    * src/seahorse-pgp-generate.c: Make new key passphrase prompts 
+    be consistent. Fixes #377938
+
+2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>
+
     * src/seahorse-ssh-generate.glade: Hook up help button. Patch by
     milo_casagrande@yahoo.it. Fixes #376098
     
